# StealthContest

./: .gitignore  README.md  Rx_decodes.csv  Tx_decodes.csv  aggregator.py  decodes.csv  demo_combined.csv  demo_leaders.py  demo_minimal_spots_to_file.py  plotter.py  pyproject.toml
.github/workflows/: collect_and_plot.yml  start_aggregator.yml  start_loops.yml  start_plotter.yml  update_plots.yml
StealthContest/: __init__.py  analysers.py  cli.py  geo.py  pskr_utils.py  wsjt.py
docs/: heatmaps.html
hamplots/: __init__.py  __main__.py  aggregator.py  analysers.py  cli.py  datasources.py  fetch_and_plot.py  plotter.py
old/: minimal_pskr_mqtt_listener.py  plot_test.py  refreshing_all_plot_with_pskrmqtt.py
scraps/: all file reader.py  demo_simple_spots_to_file.py  demo_spots_to_plots.py  rx_decodes.csv  str_to_epoch.py  tx_decodes.csv
