[project]
name = "ham-plots"
version = "0.0.2"
license = "MIT"

authors = [
  { name="G1OJS", email="g1ojs@yahoo.com" },
]
description = "Instant ranking using pskreporter.info"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

keywords = []

[project.urls]
Homepage = "https://github.com/G1OJS/StealthContest"
Issues = "https://github.com/G1OJS/StealthContest/issues"

[project.scripts]
ham_plots = "ham_plots.cli:main"
